<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card-view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="2dp">

    <android.support.v7.widget.CardView
        android:id="@+id/novel_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card-view:cardBackgroundColor="@color/novel_item_white"
        card-view:cardElevation="2dp"
        card-view:cardMaxElevation="2dp"
        card-view:cardPreventCornerOverlap="true"
        card-view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/item_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_menu_item"
            android:clickable="true"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/novel_cover"
                android:layout_width="80dp"
                android:layout_height="112dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/novel_item_cover"
                android:scaleType="fitXY"
                android:src="@drawable/ic_empty_image"
                android:transitionName="novel_cover" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="0dp"
                android:layout_marginRight="8dp"

                android:adjustViewBounds="true"
                >

                <TextView
                    android:id="@+id/novel_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/novel_option"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:singleLine="true"
                    android:text="@string/loading"
                    android:textColor="@color/novel_item_title"
                    android:textSize="@dimen/app_big_size"
                    android:transitionName="novel_title" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_below="@+id/novel_option"
                    android:background="@color/default_divider" />

                <ImageButton
                    android:id="@+id/novel_option"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/btn_menu_item_boardless"
                    android:clickable="true"
                    android:src="@mipmap/ic_clearcache" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/novel_item_text_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/novel_item_author_with_colon"
                            android:textColor="@color/novel_item_text"/>

                        <TextView
                            android:id="@+id/novel_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textSize="12sp"
                            android:text="@string/loading"
                            android:textColor="@color/novel_item_text"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/novel_item_status_with_colon"
                            android:textColor="@color/novel_item_text"/>

                        <TextView
                            android:id="@+id/novel_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textSize="12sp"
                            android:text="@string/loading"
                            android:textColor="@color/novel_item_text"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/novel_item_text_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/novel_item_update_with_colon"
                            android:textColor="@color/novel_item_text"/>

                        <TextView
                            android:id="@+id/novel_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textSize="12sp"
                            android:text="@string/loading"
                            android:textColor="@color/novel_item_text"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/novel_item_text_shortinfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/novel_item_intro_with_colon"
                            android:textColor="@color/novel_item_text"/>
                        <TextView
                            android:id="@+id/novel_intro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:maxLines="3"
                            android:text="@string/loading"
                            android:ellipsize="end"
                            android:textColor="@color/novel_item_text"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>